Footer redirects to itadinanta.net

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,7 @@
 				</div>
 			</div>
 			<div id="footer">
-				&copy; 2015 Nico Orru <span>nigu</span><span>&period;</span><span>orru</span><span>&commat;</span><span>gmail</span><span></span>&period;</span><span>com</span>
-				All content is the author's personal and does do not represent the
-				author's employer's views.
+				&copy; 2015 <a href="http://itadinanta.net">Nico Orru</a>
 			</div>
 		</div>
 	</div>
