--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">	
 <link rel="stylesheet" href="/css/default.css" type="text/css" media="screen" charset="utf-8" />
 <link rel="shortcut icon" href="/img/favicon.ico" sizes="16x16 32x32 64x64 128x128" type="image/vnd.microsoft.icon"/>
-<title>Itadinanta - {{ page.title }}</title>
+<title>Itadinanta - rnkr - {{ page.title }}</title>
 </head>
 <body>
 	<div id="page">
