Added Google Verification tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="google-site-verification" content="sDqksx8Hg0k2XqnnmIIm1edh2gEJ_gSiI1ytZk6AYMY" />
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">	
 <link rel="stylesheet" href="/css/default.css" type="text/css" media="screen" charset="utf-8" />
 <link rel="shortcut icon" href="/img/favicon.ico" sizes="16x16 32x32 64x64 128x128" type="image/vnd.microsoft.icon"/>
