Clickable logo -> itadinanta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<div id="page">
 		<div id="shadow">
 			<div id="header">
-				<h1>{{ page.title }}</h1>
+				<a href="http://itadinanta.net"><img id="headerlogo" src="/img/logo_itadinanta_bw.svg"/></a><h1>{{ page.title }}</h1>
 			</div>
 			<div id="content">
 				<div id="pageindex">
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			<div id="footer">
-				&copy; 2015 <a href="http://itadinanta.net">Nico Orru</a>
+				&copy; 2015 <a href="http://itadinanta.net/about">Nico Orru</a> at <a href="http://itadinanta.net">Itadinanta</a>
 			</div>
 		</div>
 	</div>
