Added page date

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
 				<div id="pagecontent">
 				{{ content }}
 				</div>
+				<div id="pagedate">
+				{{ date | date: '%B %d, %Y' }}
+				</div>
 			</div>
 			<div id="footer">
 				&copy; 2015 <a href="http://itadinanta.net/about">Nico Orru</a> at <a href="http://itadinanta.net">Itadinanta</a>
