--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 				{{ content }}
 				</div>
 				<div id="pagedate">
-				{{ date | date: '%B %d, %Y' }}
+				{{ page.date | date: '%B %d, %Y' }}
 				</div>
 			</div>
 			<div id="footer">
